Добавленны мапперы