@@ -9,6 +9,8 @@ import ru.xing.springcourse.petproject3rest.models.Measurement;
 import ru.xing.springcourse.petproject3rest.models.Sensor;
 import ru.xing.springcourse.petproject3rest.repositories.MeasurementRepository;
 import ru.xing.springcourse.petproject3rest.repositories.SensorRepository;
+import ru.xing.springcourse.petproject3rest.util.BusinessException;
+import ru.xing.springcourse.petproject3rest.util.MeasurementMapper;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -16,25 +18,30 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 @Slf4j
 public class MeasurementService {
     private final SensorRepository sensorRepository;
     private final MeasurementRepository measurementRepository;
+    private final MeasurementMapper measurementMapper;
 
     //Добавить новое измерение
+    @Transactional
     public void addMeasurement(String sensorName, MeasurementDTO measurementDTO) {
         Sensor sensor = sensorRepository.findByName(sensorName)
-                .orElseThrow(() -> new RuntimeException("Sensor not found: " + sensorName));
+                .orElseThrow(() -> new BusinessException("Sensor not found: " + sensorName));
 
-        Measurement measurement = Measurement.builder()
-                .value(measurementDTO.getValue())
-                .raining(measurementDTO.isRaining())
-                .measurementDateTime(measurementDTO.getMeasurementDateTime() != null
-                        ? measurementDTO.getMeasurementDateTime()
-                        : LocalDateTime.now())
-                .sensor(sensor)
-                .build();
+        //Без маппинга
+//        Measurement measurement = Measurement.builder()
+//                .value(measurementDTO.getValue())
+//                .raining(measurementDTO.isRaining())
+//                .measurementDateTime(measurementDTO.getMeasurementDateTime() != null
+//                        ? measurementDTO.getMeasurementDateTime()
+//                        : LocalDateTime.now())
+//                .sensor(sensor)
+//                .build();
+
+        //С маппингом
+        Measurement measurement = measurementMapper.toEntity(measurementDTO, sensor);
 
         measurementRepository.save(measurement);
 
@@ -43,29 +50,39 @@ public class MeasurementService {
     }
 
     //Получить список измерений
+    @Transactional(readOnly = true)
     public List<MeasurementDTO> getAllMeasurements() {
+//        return measurementRepository.findAll()
+//                .stream()
+//                .map(m -> new MeasurementDTO(
+//                        m.getValue(),
+//                        m.isRaining(),
+//                        m.getMeasurementDateTime()))
+//                .collect(Collectors.toList());
+
         return measurementRepository.findAll()
                 .stream()
-                .map(m -> new MeasurementDTO(
-                        m.getValue(),
-                        m.isRaining(),
-                        m.getMeasurementDateTime()))
-                .collect(Collectors.toList());
+                .map(measurementMapper::toDTO)
+                .toList();
     }
 
     //Получить по id измерение
+    @Transactional(readOnly = true)
     public MeasurementDTO getMeasurementById(int id) {
         Measurement measurement = measurementRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Measurement not found: " + id));
 
-        return new MeasurementDTO(
-                measurement.getValue(),
-                measurement.isRaining(),
-                measurement.getMeasurementDateTime()
-        );
+//        return new MeasurementDTO(
+//                measurement.getValue(),
+//                measurement.isRaining(),
+//                measurement.getMeasurementDateTime()
+//        );
+
+        return measurementMapper.toDTO(measurement);
     }
 
     //Количество дождевых измерений
+    @Transactional(readOnly = true)
     public long countRainingMeasurements() {
         long count = measurementRepository.countByRainingTrue();
 
@@ -74,16 +91,21 @@ public class MeasurementService {
     }
 
     //Список всех дождевых измерений
+    @Transactional(readOnly = true)
     public List<MeasurementDTO> getRainingMeasurements() {
         List<Measurement> measurements = measurementRepository.findByRainingTrue();
 
         log.info("List of raining measurements: {}", measurements.size());
 
+//        return measurements.stream()
+//                .map(m -> new MeasurementDTO(
+//                        m.getValue(),
+//                        m.isRaining(),
+//                        m.getMeasurementDateTime()
+//                )).toList();
+
         return measurements.stream()
-                .map(m -> new MeasurementDTO(
-                        m.getValue(),
-                        m.isRaining(),
-                        m.getMeasurementDateTime()
-                )).toList();
+                .map(measurementMapper::toDTO)
+                .toList();
     }
 }
